--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,14 @@ android {
 dependencies {
 
     def retrofit_version = "2.9.0"
+    def fragment_version = "1.4.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
